# pyfarm-cli

./: pyproject.toml
pyfarm/cli/: cultivars.py  grow.py  main.py  protocols.py
tests/: test_cli.py
