[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfarm-cli"
version = "0.1.0"
description = "Command-line interface for the pyfarm ecosystem"
requires-python = ">=3.11"
dependencies = [
    "pyfarm-core",
    "pyfarm-control",
    "click>=8.0",
]

[project.scripts]
pyfarm = "pyfarm.cli.main:cli"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["pyfarm"]
